# repo-translator

./: .gitignore  CLAUDE.md  README.md  SCRATCH.md  TODO.md  _ds_bundle.js  config.example.yaml  pyproject.toml  repo-translator-design.md  repo-translator-sidecar.spec  styles.css
.github/workflows/: desktop-windows-build.yml
contrib/launchd/: com.repo-translator.plist
contrib/systemd/: repo-translator.service
desktop/: package-lock.json  package.json
desktop/src/: App.tsx  SyncContext.tsx  api.ts  main.tsx
desktop/src-tauri/: Cargo.toml  copy-sidecar.sh  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs
repo_translator/: __init__.py  api_server.py  cache_manager.py  cli.py  config.py  git_manager.py  scheduler.py  sync.py  usage_manager.py
repo_translator/parser/: __init__.py  block.py  markdown_parser.py
repo_translator/translator/: __init__.py  base.py  claude_translator.py  deepseek_translator.py  factory.py  openai_translator.py
tests/: test_api_server.py  test_cache_manager.py  test_claude_translator.py  test_cli.py  test_config.py  test_deepseek_translator.py  test_e2e.py  test_git_manager.py  test_markdown_parser.py  test_openai_translator.py  test_scheduler.py  test_sync.py  test_translator_base.py  test_usage_manager.py
tokens/: colors.css  fonts.css  typography.css
ui_kits/desktop-app/: AppShell.jsx  ConsoleScreen.jsx  DashboardScreen.jsx  GlossaryScreen.jsx  Modal.jsx  PageHeader.jsx  ReposScreen.jsx  SettingsScreen.jsx  UsageScreen.jsx  index.html
(+21 files in other folders)
